@@ -57,6 +57,8 @@ x2goclient (3.99.3.0-0~x2go1) UNRELEASED; urgency=low
     - disable check box "use default sound port" if sound disabled
     - add support for HTTP proxy - developed by Heinrich Schuchardt (xypron.glpk@gmx.de)
     - add support for SSH proxy in class SshMasterConnection 
+    - SshMasterConnection emit signal to GUI thread if it need a passphrase to decrypt a ssh key.
+      GUI thread use input dialog to read a passphrase from user
 
   [ Ricardo Diaz ]
   * New upstream version (3.99.3.0):
